--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   uuid: ^3.0.7
   flutter_riverpod: ^2.3.6
   image_picker: ^0.8.7+5
-  # location: ^4.3.0
+  location: ^4.4.0
   http: ^0.13.6
   path: ^1.8.3
   path_provider: ^2.0.15
